[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Prefabs/Abstract/AbstractEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/Items/powerup_speed.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy/Enemy4.gd" type="Script" id=3]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.4671, 16.5494 )

[sub_resource type="CircleShape2D" id=3]
radius = 144.629

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="FlipComponents" index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AnimationTree" parent="FlipComponents" index="2"]
parameters/playback = SubResource( 1 )

[node name="Body" parent="." index="1"]
shape = SubResource( 2 )

[node name="ChasingArea" type="Area2D" parent="." index="3"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChasingArea" index="0"]
shape = SubResource( 3 )
one_way_collision_margin = 1.2

[node name="Timer" type="Timer" parent="." index="4"]
[connection signal="body_entered" from="ChasingArea" to="." method="_on_ChasingArea_body_entered"]
[connection signal="body_exited" from="ChasingArea" to="." method="_on_ChasingArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
